fix AMD test runner
update page titles of test html

--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf8'>
-  <title>Backbone-ViewState Test Suite</title>
+  <title>Backbone-Decorator Test Suite</title>
   <link rel="stylesheet" href="vendor/qunit.css" type="text/css" media="screen">
 </head>
 <body>
